Prvi graf skoraj končal

--- a/BT_Updated/settings.gradle
+++ b/BT_Updated/settings.gradle
@@ -10,6 +10,7 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
+        maven { url 'https://jitpack.io' }
     }
 }
 rootProject.name = "BT_simple"
